fix bug DT-1310, align menu sections

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -721,6 +721,14 @@ hr.line {
                     border-bottom: 1px solid darken(@color-swatch1,7%);
                 }
             }
+            a {
+            	@media @tablet {
+            		white-space: nowrap;
+            	}
+            	@media only screen and (max-width: 550px) {
+            		white-space: normal;
+            	}
+            }
             @media only screen and (max-width: 550px) {
                 width: 100%;
                 border-top: 1px solid darken(@color-swatch1,7%);
